fix: title alignment

--- a/src/components/Page/pagedisplay.module.scss
+++ b/src/components/Page/pagedisplay.module.scss
@@ -9,7 +9,7 @@
     height: 4rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-shrink: 0;
     padding: 0 0.5rem;
     gap: 0.5rem;
